--- a/PatternsGenerator/src/main/resources/templates/credits.html
+++ b/PatternsGenerator/src/main/resources/templates/credits.html
@@ -31,6 +31,12 @@
     <br />
     <br />
 
+    <p>Composite source codes:</p>
+    <a href="https://en.wikipedia.org/wiki/Composite_pattern">https://en.wikipedia.org/wiki/Composite_pattern</a>
+    <br />
+    <br />
+
+
 </div>
 <br />
 <div class="container">
