--- a/PatternsGenerator/src/main/resources/templates/layout/header.html
+++ b/PatternsGenerator/src/main/resources/templates/layout/header.html
@@ -35,6 +35,7 @@
                             <div class="dropdown-divider"></div>
                             <h6 class="dropdown-header">Structural patterns</h6>
                             <a class="dropdown-item" href="adapter">Adapter</a>
+                            <a class="dropdown-item" href="composite">Composite</a>
                         </div>
                     </li>
                     <li class="nav-item dropdown">
@@ -55,6 +56,7 @@
                             <div class="dropdown-divider"></div>
                             <h6 class="dropdown-header">Structural patterns</h6>
                             <a class="dropdown-item" href="adapterData">Adapter</a>
+                            <a class="dropdown-item" href="compositeData">Composite</a>
                         </div>
                     </li>
                     <li class="nav-item active">
